Fix the alignment and font on the loading text.

--- a/ddoplanner/index.html
+++ b/ddoplanner/index.html
@@ -74,8 +74,8 @@
 					<circle cx="1041.6122" cy="-37.3" r="5.4773326" transform="matrix(0,1,-1,0,0,0)" />
 					<circle cx="1031.3622" cy="-21" r="5.4773326" transform="matrix(0,1,-1,0,0,0)" />
 					<circle cx="1015.3622" cy="-10.55" r="5.4773326" transform="matrix(0,1,-1,0,0,0)" />
-					<text x="20.25" y="1002" style="font-family:sans-serif;font-size:16px;">
-						<tspan x="20.25" y="1002">LOADING</tspan>
+					<text x="20.05" y="1002" style="font-family:Arial, Helvetica, sans-serif;font-size:16px;">
+						<tspan x="20.5" y="1002">LOADING</tspan>
 					</text>
 				</g>
 			</svg>
