--- a/ddoplanner/index.html
+++ b/ddoplanner/index.html
@@ -16,47 +16,34 @@
 				overflow-x: hidden;
 				min-height: 100vh;
 				background-color: rgb(16, 16, 16);
+				color: rgb(244, 244, 244);
+				font-family: "Courier New", Courier, monospace;
+				font-size: 16px;
 				text-align: center;
 			}
 
 			#loadingAnimation {
 				width: 150px;
 				height: 150px;
+				margin-top: 16px;
 			}
-
-			#loadingAnimation circle { animation: pulsate-circle 4s infinite; }
-
-			#loadingAnimation circle:nth-of-type(1)  { animation-delay: 0.25s; }
-			#loadingAnimation circle:nth-of-type(2)  { animation-delay: 0.5s; }
-			#loadingAnimation circle:nth-of-type(3)  { animation-delay: 0.75s; }
-			#loadingAnimation circle:nth-of-type(4)  { animation-delay: 1s; }
-			#loadingAnimation circle:nth-of-type(5)  { animation-delay: 1.25s; }
-			#loadingAnimation circle:nth-of-type(6)  { animation-delay: 1.5s; }
-			#loadingAnimation circle:nth-of-type(7)  { animation-delay: 1.75s; }
-			#loadingAnimation circle:nth-of-type(8)  { animation-delay: 2s; }
-			#loadingAnimation circle:nth-of-type(9)  { animation-delay: 2.25s; }
-			#loadingAnimation circle:nth-of-type(10) { animation-delay: 2.5s; }
-			#loadingAnimation circle:nth-of-type(11) { animation-delay: 2.75s; }
-			#loadingAnimation circle:nth-of-type(12) { animation-delay: 3s; }
-			#loadingAnimation circle:nth-of-type(13) { animation-delay: 3.25s; }
-			#loadingAnimation circle:nth-of-type(14) { animation-delay: 3.5s; }
-			#loadingAnimation circle:nth-of-type(15) { animation-delay: 3.75s; }
-			#loadingAnimation circle:nth-of-type(16) { animation-delay: 4s; }
-
 
 			#loadingAnimation circle, #loadingAnimation path { fill: rgb(244, 244, 244); }
 
-			@keyframes pulsate-circle {
-				from { r: 6 }
-				5% { r: 9 }
-				10% { r: 6 }
+			#loadingChecklist {
+				list-style-type: none;
+				padding-left: 0;
 			}
+
+			#loadingChecklist li.error { color: rgb(164, 0, 0); }
+			#loadingChecklist li.success { color: rgb(0, 164, 0); }
+			#loadingChecklist li.pending { opacity: 0.2; }
 		</style>
 	</head>
 	
 	<body>
 		<span id="applicationLoader">
-			<svg viewBox="0 0 118 118" id="loadingAnimation">
+			<svg viewBox="0 0 118 118" id="loadingAnimation" class="active">
 				<g transform="translate(0,-934.36216)">
 					<circle cx="993.45013" cy="-9" r="5.4773326" transform="matrix(0,1,-1,0,0,0)" />
 					<circle cx="974.45258" cy="-12.863981" r="5.4773326" transform="matrix(0,1,-1,0,0,0)" />
@@ -85,10 +72,64 @@
 					</g>
 				</g>
 			</svg>
+
+			<ul id="loadingChecklist">
+				<li>Checking Network Connection</li>
+			</ul>
 		</span>
 
-		<script type="text/template">
+		<script>
 			( function () {
+				'use strict';
+
+				var $$ = {
+					forEach: function ( array, callback ) {
+						var i = -1;
+
+						while ( ++i < array.length ) {
+							callback( array[ i ], i, array )
+						}
+					}
+				};
+
+				var methods = {
+					startLoadingSpinner: function () {
+						var circles = document.getElementById( 'applicationLoader' ).getElementsByTagName( 'circle' );
+
+						$$.forEach( circles, function ( circle, index, circles ) {
+							if ( methods.startLoadingSpinner ) {
+								setTimeout( function () {
+									circle.setAttribute( 'r', 9 );
+
+									setTimeout( function () {
+										circle.setAttribute( 'r', 6 );
+									}, 300 );
+								}, 300 * index );
+							}
+						} );
+
+						if ( methods.startLoadingSpinner ) {
+							setTimeout( methods.startLoadingSpinner, 300 * circles.length );
+						}
+					}
+				};
+
+				methods.startLoadingSpinner();
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+				/*
 				var httpRequest = new XMLHttpRequest();
 
 				httpRequest.onreadystatechange = () => {
@@ -99,6 +140,7 @@
 
 				httpRequest.open( 'HEAD', 'manifest.json', true );
 				httpRequest.send();
+				*/
 			}() );
 		</script>
 	</body>
