--- a/ddoplanner/index.html
+++ b/ddoplanner/index.html
@@ -4,12 +4,26 @@
 		<meta charset="utf-8">
 		<meta content="ie=edge" http-equiv="x-ua-compatible">
 		<meta content="width=device-width, initial-scale=1" name="viewport">
+		<meta content="#282828" name="theme-color">
 		<link rel="manifest" href="manifest.json">
 
 		<title>Taplar - DDO Planner</title>
+
+		<style>
+			body {
+				background-color: rgb(16, 16, 16);
+			}
+
+			noscript {
+				color: rgb(224, 224, 224);
+			}
+		</style>
 	</head>
 	<body>
 		<div id="application"></div>
+		<noscript>
+			Javascript must be enabled to use this application.
+		</noscript>
 		<script src="main.js" type="text/javascript"></script>
 	<script type="text/javascript" src="main.js"></script></body>
 </html>
