--- a/ddoplanner/index.html
+++ b/ddoplanner/index.html
@@ -5,7 +5,7 @@
 		<meta content="ie=edge" http-equiv="x-ua-compatible">
 		<meta content="width=device-width, initial-scale=1" name="viewport">
 		<meta content="#282828" name="theme-color">
-		<link rel="manifest" href="manifest.json">
+		<link rel="manifest" href="./manifest.json">
 
 		<title>Taplar - DDO Planner</title>
 
@@ -24,6 +24,6 @@
 		<noscript>
 			Javascript must be enabled to use this application.
 		</noscript>
-		<script src="main.js" type="text/javascript"></script>
+		<script src="./main.js" type="text/javascript"></script>
 	<script type="text/javascript" src="main.js"></script></body>
 </html>
