--- a/ddoplanner/index.html
+++ b/ddoplanner/index.html
@@ -6,6 +6,7 @@
 		<meta content="width=device-width, initial-scale=1" name="viewport">
 		<meta content="#282828" name="theme-color">
 		<link rel="manifest" href="./manifest.json">
+		<link rel="preload" as="style" href="//fonts.googleapis.com/css?family=Open+Sans" onload="this.rel = 'stylesheet'">
 
 		<title>Taplar - DDO Planner</title>
 
