Updated ddoplanner to revision 1e8f44bb3e3acb7f69704d8cab9d2557a6fb067f

--- a/ddoplanner/index.html
+++ b/ddoplanner/index.html
@@ -30,7 +30,7 @@
 			@media (min-width: 360px) {
 				.application { display: inherit; }
 				.application + .firstRender { display: none; }
-				.application + .firstRender .minimumWidthInvalid { display: none; }
+				.firstRender .minimumWidthInvalid { display: none; }
 			}
 		</style>
 	</head>
