--- a/ddoplanner/index.html
+++ b/ddoplanner/index.html
@@ -5,8 +5,10 @@
 		<meta content="ie=edge" http-equiv="x-ua-compatible">
 		<meta content="width=device-width, initial-scale=1" name="viewport">
 		<meta content="#282828" name="theme-color">
-		<link rel="manifest" href="./manifest.json">
+		<link rel="manifest" href="./assets/jsons/manifest.json">
 		<link rel="preload" as="style" href="//fonts.googleapis.com/css?family=Open+Sans" onload="this.rel = 'stylesheet'">
+		<link rel="preload" as="style" href="./assets/styles/vendor/font-awesome/4.7.0/css/font-awesome.min.css" onload="this.rel = 'stylesheet'">
+		<link rel="preload" as="style" href="./assets/styles/vendor/bootstrap/bootstrap.css" onload="this.rel = 'stylesheet'">
 
 		<title>Taplar - DDO Planner</title>
 
@@ -18,14 +20,22 @@
 			noscript {
 				color: rgb(224, 0, 0);
 			}
+			
+			.application { display: none; }
 
 			.firstRender {
 				color: rgb(224, 224, 224);
 				font-size: 24px;
 				text-align: center;
 			}
-			
-			.application { display: none; }
+
+			.firstRender.initializing .initializing { display: inherit; }
+			.firstRender.initializingFailure .initializingFailure { display: inherit; }
+			.firstRender.starting .starting { display: inherit; }
+			.firstRender.startingFailure .startingFailure { display: inherit; }
+			.firstRender .browser:not(:first-of-type) { margin-left: 12px; }
+			.firstRender .bootsequence { display: none; }
+			.firstRender .bootsequence.failure { color: rgb(224, 0, 0); }
 
 			@media (min-width: 360px) {
 				.application { display: inherit; }
@@ -38,14 +48,26 @@
 		<div id="application"></div>
 
 		<div class="firstRender">
-			<div><img src="./d20Icon_192x192.png"></div>
+			<div><img src="./assets/images/icons/d20Icon_192x192.png"></div>
 			<div>DDO Planner</div>
 
 			<noscript>
 				<p>Please enable javascript<br>to use this application</p>
 			</noscript>
 
+			<div class="bootsequence initializing">Initializing Application</div>
+			<div class="bootsequence initializingFailure failure">Unable to Initialize Application</div>
+			<div class="bootsequence starting">Starting Application</div>
+			<div class="bootsequence startingFailure failure">Unable to Start Application</div>
+
 			<p class="minimumWidthInvalid">Minimum display width<br>of 360px desired</p>
+
+			<p class="supportedBrowsers">
+				<div>Supported Browsers</div>
+				<i class="browser fa fa-chrome"> Chrome</i>
+				<i class="browser fa fa-edge"> Edge</i>
+				<i class="browser fa fa-firefox"> Firefox</i>
+			</p>
 		</div>
 		
 		<script src="./main.js" type="text/javascript"></script>
