--- a/ddoplanner/index.html
+++ b/ddoplanner/index.html
@@ -1,77 +1,111 @@
 <!DOCTYPE html>
 <html lang="en-US">
-	<head>
-		<meta charset="utf-8">
-		<meta content="ie=edge" http-equiv="x-ua-compatible">
-		<meta content="width=device-width, initial-scale=1" name="viewport">
-		<meta content="#282828" name="theme-color">
-		<meta content="Dungeons and Dragons Online Character Planner" name="Description">
-		<link rel="manifest" href="./assets/jsons/manifest.json">
-		<link rel="preload" as="style" href="//fonts.googleapis.com/css?family=Open+Sans" onload="this.rel = 'stylesheet'">
-		<link rel="preload" as="style" href="./assets/styles/vendor/font-awesome/4.7.0/css/font-awesome.min.css" onload="this.rel = 'stylesheet'">
-		<link rel="preload" as="style" href="./assets/styles/vendor/bootstrap/bootstrap.css" onload="this.rel = 'stylesheet'">
 
-		<title>Taplar - DDO Planner</title>
+<head>
+	<meta charset="utf-8">
+	<meta content="ie=edge" http-equiv="x-ua-compatible">
+	<meta content="width=device-width, initial-scale=1" name="viewport">
+	<meta content="#282828" name="theme-color">
+	<meta content="Dungeons and Dragons Online Character Planner" name="Description">
+	<title>
+		Taplar - DDO Planner
+	</title>
+	<link rel="manifest" href="./assets/jsons/manifest.json">
+	<link rel="preload" as="style" href="//fonts.googleapis.com/css?family=Open+Sans" onload="this.rel = 'stylesheet'">
+	<link rel="preload" as="style" href="./assets/styles/vendor/fontello/css/fontello.css" onload="this.rel = 'stylesheet'">
+	<style>
+		body {
+			font-family: 'Open Sans', sans-serif;
+			max-width: 100vw;
+			min-height: 100vh;
+			min-width: 360px;
+		}
 
-		<style>
-			body { background-color: rgb(16, 16, 16); font-size: 12px; }
-			h1, h2, h3, h4, h5, h6 { font-size: 12px; margin: 0; }
-			noscript { color: rgb(224, 0, 0); }
-			#application, .application:not(.started) { display: none; }
-			.application.started + .firstRender { display: none; }
-			.firstRender { color: rgb(224, 224, 224); font-size: 24px; text-align: center; }
-			.firstRender aside label { display: block; }
-			.firstRender footer h1 { font-size: 24px; margin-top: 20px; }
-			.firstRender footer h2 { display: inline-block; font-size: 16px; }
-			.firstRender footer h2:not(:first-of-type) { margin-left: 8px; }
-			.firstRender section .failure { color: rgb(224, 0, 0); }
-			.firstRender .bootsequence { display: none; font-size: 18px; margin: 0; }
-			.firstRender .bootsequence:first-of-type { margin-top: 20px; }
-			.firstRender .startButton {
-				background-color: rgb(96, 96, 96);
-				border-color: rgb(128, 128, 128);
-				border-radius: 4px;
-				color: rgb(0, 0, 0);
-				font-size: 18px;
-				margin-left: auto;
-				margin-right: auto;
-				margin-top: 8px;
-			}
-		</style>
-		<script type="text/html">
-			color: rgb(0, 0, 0);
-			margin-top: 8px;
+		h1, h2, h3, h4, h5, h6 {
+			font-size: inherit;
+			margin: 0;
+		}
+
+		.border-radius-4 { border-radius: 4px; }
+		.center {
+			margin-left: auto;
+			margin-right: auto;
+		}
+		.color-black { color: rgb(0, 0, 0); }
+		.color-light-black { background-color: rgb(16, 16, 16); }
+		.color-light-red { color: rgb(224, 0, 0); }
+		.color-white { color: rgb(224, 224, 224); }
+		.display-block { display: block; }
+		.display-inline-block { display: inline-block; }
+		.display-none { display: none; }
+		.font-size-x1 { font-size: 12px; }
+		.font-size-x1-3 { font-size: 16px; }
+		.font-size-x1-5 { font-size: 18px; }
+		.font-size-x2 { font-size: 24px; }
+		.no-margin { margin: 0; }
+		.no-wrap { white-space: nowrap; }
+		.push-down-8 { margin-top: 8px; }
+		.push-down-20 { margin-top: 20px; }
+		.push-right-8 { margin-left: 8px; }
+		.text-center { text-align: center; }
+
+		.firstRender .startButton {
+			background-color: rgb(96, 96, 96);
 			border-color: rgb(128, 128, 128);
-			border-radius: 4px;
-		</script>
-	</head>
-	<body>
-		<section id="application"></section>
 
-		<section class="firstRender">
-			<aside aria-hidden="true">
-				<img src="./assets/images/icons/d20Icon_192x192.png" id="firstRenderLogo">
-				<label for="firstRenderLogo">DDO Planner</label>
-			</aside>
+		}
 
-			<section aria-live="polite">
-				<p class="bootsequence initializing" aria-hidden="true">Initializing Application</p>
-				<p class="bootsequence initializingFailure failure" aria-hidden="true">Unable to Initialize Application</p>
-				<button class="startButton" aria-hidden="true">Start Application</button>
-			</section>
+		#firstRenderLogo { margin-top: 12px; }
+	</style>
 
-			<noscript>
-				<p>Please enable javascript to use this application</p>
-			</noscript>
+</head>
 
-			<footer>
-				<h1>Supported Browsers</h1>
-				<h2 aria-label="Google Chrome"><i class="fa fa-chrome"></i> Chrome</h2>
-				<h2 aria-label="Microsoft Edge"><i class="fa fa-edge"></i> Edge</h2>
-				<h2 aria-label="Mozilla Firefox"><i class="fa fa-firefox"></i> Firefox</h2>
-			</footer>
+<body class="color-light-black font-size-x1">
+	<section id="application" class="display-none"></section>
+
+	<section class="firstRender color-white font-size-x2 text-center">
+		<aside aria-hidden="true">
+			<img src="./assets/images/icons/d20Icon_192x192.png" id="firstRenderLogo">
+			<label for="firstRenderLogo" class="display-block">DDO Planner</label>
+		</aside>
+
+		<section class="font-size-x1-5" aria-live="polite">
+			<p class="bootsequence initializing display-none no-margin push-down-20" aria-hidden="true">Initializing Application</p>
+
+			<p class="bootsequence initializingFailure color-light-red display-none no-margin" aria-hidden="true">
+				Unable to Initialize Application
+			</p>
+
+			<button class="startButton border-radius-4 center color-black display-none font-size-x1-5 push-down-8" aria-hidden="true">
+				Start Application
+			</button>
 		</section>
-		
-		<script src="./main.js" type="text/javascript"></script>
-	<script type="text/javascript" src="main.js"></script></body>
+
+		<noscript>
+			<p class="color-light-red">Please enable javascript <span class="no-wrap">to use this application</span></p>
+		</noscript>
+
+		<footer class="font-size-x1-3 push-down-20">
+			<h1 class="font-size-x2">Supported Browsers</h1>
+
+			<h2 class="display-inline-block" aria-label="Google Chrome">
+				<i class="browser-icon icon-chrome"></i>
+				<span>Chrome</span>
+			</h2>
+
+			<h2 class="display-inline-block push-right-8" aria-label="Microsoft Edge">
+				<i class="browser-icon icon-edge"></i>
+				<span>Edge</span>
+			</h2>
+
+			<h2 class="display-inline-block push-right-8" aria-label="Mozilla Firefox">
+				<i class="browser-icon icon-firefox"></i>
+				<span>Firefox</span>
+			</h2>
+		</footer>
+	</section>
+
+	<script src="./main.js" type="text/javascript"></script>
+<script type="text/javascript" src="main.js"></script></body>
+
 </html>
