Updated ddoplanner to revision 27af0f556c2bf3eff057125270b229c0faa610d6

--- a/ddoplanner/index.html
+++ b/ddoplanner/index.html
@@ -105,16 +105,17 @@
 					<span>Chrome</span>
 				</h2>
 
-				<h2 class="display-inline-block push-right-8" aria-label="Microsoft Edge">
-					<i class="browser-icon icon-edge"></i>
-					<span>Edge</span>
-				</h2>
-
 				<h2 class="display-inline-block push-right-8" aria-label="Mozilla Firefox">
 					<i class="browser-icon icon-firefox"></i>
 					<span>Firefox</span>
 				</h2>
 			</footer>
+
+			<section class="font-size-x1-5 push-down-20">
+				<p class="no-margin">
+					Having trouble?  Checkout the <a href="https://github.com/taplar/taplar-ddoplanner/blob/master/README.md" target="_new">FAQ</a>
+				</p>
+			</section>
 		</section>
 	<script type="text/javascript" src="main.js"></script></body>
 </html>
